Archive2/7a/90c37fb24cc4c1/output
main.cpp: In function ‘int main()’:
main.cpp:13:5: error: ‘object::object(const object&)’ is private
     object(const object& b);
     ^
main.cpp:21:14: error: within this context
     object o=true;
              ^
